# kl520_image_test

./: README.md
KL_520_example/: post_processing_ex.c
KL_520_example/kl520_dme_image_inference_example/: CMakeLists.txt  kl520_image_inference_example.cpp
KL_520_example/kl520_dme_simplest_feature_test/: CMakeLists.txt  kl520_dme_simplest_feature_test.cpp
Python_validation/: Main.ipynb  environment.yml
Python_validation/.ipynb_checkpoints/: Main-checkpoint.ipynb
data1/: batch_input_params.json  input_params.json
my_test_model/: models_520.nef
